user-select set to none, app-content overflow scroll given to fix sidebar

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -13,5 +13,6 @@ html,body {
   width: 100%;
   height: 100%;
   color: #fff;
+  user-select: none;
   /* font-family: "Gabarito", sans-serif!important; */
 }
